<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context="com.wilderarias.calculadoraperimetroareavolumen.MainActivityPunto1">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/titulo"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="15sp"/>

    <TextView
        android:padding="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/seleFigura"
        android:textColor="@color/black"/>

    <ImageView
        android:id="@+id/iFiguras"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/radio"
        android:padding="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton android:id="@+id/rCirculo"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/circulo"
                android:checked="true"
                android:onClick="onRadioButtonClicked"/>
            <RadioButton android:id="@+id/rCuadrado"
                android:layout_width="0dp"
                android:layout_weight="1.2"
                android:layout_height="wrap_content"
                android:text="@string/cuadrado"
                android:onClick="onRadioButtonClicked"/>
            <RadioButton android:id="@+id/rCubo"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/cubo"
                android:onClick="onRadioButtonClicked"/>
            <RadioButton android:id="@+id/rTriangulo"
                android:layout_width="0dp"
                android:layout_weight="1.2"
                android:layout_height="wrap_content"
                android:text="@string/triangulo"
                android:onClick="onRadioButtonClicked"/>
        </RadioGroup>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Ingrese los siguientes valores"
        android:padding="10dp"
        android:textColor="@color/black"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/ledit1">
        <EditText
            android:id="@+id/eedit1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/radio"
            android:inputType="numberDecimal"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/ledit2"
        android:visibility="gone">
        <EditText
            android:id="@+id/eedit2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/ledit3"
        android:visibility="gone">
        <EditText
            android:id="@+id/eedit3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            />
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calcular"
        android:layout_gravity="center"
        android:background="@color/colorAccent"
        android:onClick="calcularResultados"/>

    <TextView
        android:id="@+id/tResultados"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:visibility="gone"/>

</LinearLayout>
